feat: add hugs chart to the feed
